# alertmanager-pachca-adapter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alertmanager.local.yml  docker-compose.yml  pyproject.toml  routes.example.yaml
app/: formatting.py  logging_setup.py  main.py  metrics.py  models.py  pachca.py  routes_loader.py  settings.py
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml  servicemonitor.yaml
